// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return summary for many expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $1.00
  </h1>
</div>
`;

exports[`should return summary for one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $1.00
  </h1>
</div>
`;
